Added Buy-A-Mac browser test using javascript too

--- a/build.gradle
+++ b/build.gradle
@@ -41,9 +41,9 @@ test {
             includeTags 'Demo'
             System.out.println("Executing limited Demo test set")
         }
-        if (project.hasProperty("Browser")) {
-            includeTags 'Browser'
-            System.out.println("Executing limited Browser test set")
+        if (project.hasProperty("BuyAMac")) {
+            includeTags 'BuyAMac'
+            System.out.println("Executing limited Buy-A-Mac test set")
         }
     }
 }
